--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   velocity_x: ^4.3.1
   lottie: ^3.3.1
   animated_splash_screen: ^1.3.0
+  pin_code_fields: ^8.0.1
   
 
 
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/auth_images/
+    
     - assets/lottie/
     - assets/fonts/
   #   - images/a_dot_ham.jpeg
@@ -86,9 +88,9 @@ flutter:
         - asset: assets/fonts/libertin.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Mono
+      fonts:
+        - asset: assets/fonts/Montserrat.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
