--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   lottie: ^3.3.1
   animated_splash_screen: ^1.3.0
   pin_code_fields: ^8.0.1
+  curved_navigation_bar: ^1.0.6
   
 
 
