--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/auth_images/
-    
+    - assets/images/onBoarding_images/
     - assets/lottie/
     - assets/fonts/
   #   - images/a_dot_ham.jpeg
